---
source: compiler-core/src/type_/tests/errors.rs
expression: type Fancy_Bool = Bool
---
error: Invalid discard name
  ┌─ /src/one/two.gleam:1:1
  │
1 │ type Fancy_Bool = Bool
  │ ^^^^^^^^^^^^^^^^^^^^^^ This is not a valid upname

Hint: Upnames start with an uppercase letter and contain only lowercase
letters, numbers, and uppercase letters.
Try: FancyBool
